# verificador-cedula

./: .env.example  .gitignore  README.md  justfile  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: main.py
app/cache/: base.py  memory.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/models/: cedula.py
app/routers/: cedula.py  health.py
app/schemas/: cedula.py
app/services/: cedula_service.py
app/services/providers/: __init__.py  base.py  mock.py  pnp_scraper.py
app/utils/: validators.py
tests/: conftest.py  test_cedula_router.py  test_service.py  test_validators.py
